<resources>
    <string name="app_name">Wikitaku</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre completo</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTRARSE</string>
    <string name="btn_link_to_register">¿No eres miembro aún?. Registrate ya</string>
    <string name="btn_link_to_login">Ya tengo cuenta. Entrar.</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Nombre completo</string>

    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>

    <string name="action_settings">Ajustes</string>
    <string name="textview">TextView</string>
    <string name="nota">Nota</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_manga">MangaActivity</string>

    <string name="search">Search Demo</string>
    <string name="submitted">registrado</string>
    <string name="title_activity_buscador">Buscador</string>
    <string name="title_activity_top_anime">TopAnimeActivity</string>
    <string name="title_activity_emision">EmisionActivity</string>
    <string name="title_activity_prox">ProxActivity</string>
    <string name="title_activity_seasson">SeassonActivity</string>
    <string name="title_activity_manga_item">MangaItem</string>
    <string name="title_activity_buscador_manga">BuscadorManga</string>
    <string name="title_activity_top_manga">TopMangaActivity</string>
    <string name="title_activity_publi">PubliActivity</string>
    <string name="title_activity_prox_manga">ProxMangaActivity</string>
    <string name="title_activity_galeria_manga">GaleriaManga</string>
    <string name="btn_añadir">Añadir</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="txt_calificacion">Calificación</string>
    <string name="txt_nombreorg">Nombre original</string>
    <string name="txt_tipo">Tipo</string>
    <string name="txt_episodios">Episodios</string>
    <string name="txt_estado">Estado</string>
    <string name="txt_emitido">Emitido</string>
    <string name="txt_temporada">Temporada</string>
    <string name="txt_retransmitido">Retransmitido</string>
    <string name="txt_puntuacion">Puntuación</string>
    <string name="txt_duracion">Duración</string>
    <string name="txt_pegi">Pegi</string>
    <string name="txt_fuente">Fuente</string>
    <string name="txt_productores">Productores</string>
    <string name="txt_estudio">Estudio</string>
    <string name="txt_genero">Género</string>
    <string name="txt_sinopsis">Sinopsis</string>
    <string name="txt_trailer">Tráiler</string>
    <string name="txt_enlaces">¿Quieres saber más de esta serie?</string>
    <string name="txt_boton">Quiero saber más</string>
    <string name="txt_asunto">Asunto</string>
    <string name="txt_mensaje">Mensaje</string>
    <string name="txt_enviar">Enviar</string>
    <string name="txt_capitulos">Capítulos</string>
    <string name="txt_volumenes">Volúmenes</string>
    <string name="txt_publicado">Publicado</string>
    <string name="txt_autor">Autores</string>
    <string name="txt_serializacion">Serialización</string>
    <string name="txt_galeria">Galería</string>
    <string name="txt_acceder">Acceder a la galería</string>
    <string name="txt_enlaces2">¿Quieres saber más de este manga?</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_categoria">Categoría</string>
    <string name="txt_fechac">Fecha comienzo</string>
    <string name="txt_manga">Manga</string>
    <string name="txt_top">Top</string>
    <string name="txt_prox">Próximamente</string>
    <string name="txt_emision">Emisión</string>
    <string name="txt_anime">Anime</string>
    <string name="txt_publicando">Publicando</string>
    <string name="txt_soporte">Soporte</string>
    <string name="txt_cerrar">Cerrar sesión</string>
    <string name="txt_compartir">Compartir</string>
    <string name="txt_favoritos">Favoritos</string>
    <string name="txt_ficha">Ficha</string>
    <string name="txt_ranking">Ranking Anime</string>
    <string name="txt_emi">En Emisión</string>
    <string name="txt_ranman">Ranking Manga</string>
    <string name="txt_captura">Captura</string>
</resources>
