<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/waterseven3">

    <TextView
        android:id="@+id/txtForSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="50dp"
        android:text="@string/txt_asunto" />

    <EditText
        android:id="@+id/etSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_gravity="center"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="20dp"
        android:width="300dip" />

    <TextView
        android:text="@string/txt_mensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:id="@+id/txtForBody" />

    <EditText android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="5"
        android:background="@drawable/edittextbackground"
        android:width="300dip"
        android:layout_gravity="center"
        android:id="@+id/etBody">
    </EditText>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:width="150dip"
        android:background="@drawable/button"
        android:text="@string/txt_enviar" />

</LinearLayout>